Update app name in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "お見積りシミュレーター - くらしと仕事のITパートナー",
+  "name": "お見積りシミュレーター - ITライフワークデザイン",
   "short_name": "見積もり",
   "description": "長崎県を中心に活動する訪問ITサポートの料金シミュレーター",
   "start_url": "./index.html",
